<package format="3">
  <name>arm_control</name>
  <version>0.0.0</version>
  <description>Control package for the robot arm</description>
  <maintainer email="lorenzopalma009@gmail.com">pixel-0-1</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>
